--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				<div class="3u">
 					<section>
 						<div class="mbox-style">
-							<h2 class="title">Maecenas luctus lectus</h2>
+							<h2 class="title">Servicio1</h2>
 							<div class="content">
 								<p class="subtitle">Pellentesque pede. Donec pulvinar metus. In eu odio at lectus  mollis. </p>
 								<p>Pellentesque viverra vulputate enim. Aliquam erat volutpat. Pellentesque tristique ante ut risus. Quisque dictum.</p>
@@ -77,7 +77,7 @@
 				<div class="3u">
 					<section>
 						<div class="mbox-style">
-							<h2 class="title">Etiam posuere augue</h2>
+							<h2 class="title">Servicio2</h2>
 							<div class="content">
 								<p class="subtitle">Pellentesque pede. Donec pulvinar metus. In eu odio at lectus  mollis. </p>
 								<p>Pellentesque viverra vulputate enim. Aliquam erat volutpat. Pellentesque tristique ante ut risus. Quisque dictum.</p>
@@ -89,7 +89,7 @@
 				<div class="3u">
 					<section>
 						<div class="mbox-style">
-							<h2 class="title">Fusce ultrices fringilla</h2>
+							<h2 class="title">Servicio3</h2>
 							<div class="content">
 								<p class="subtitle">Pellentesque pede. Donec pulvinar metus. In eu odio at lectus  mollis. </p>
 								<p>Pellentesque viverra vulputate enim. Aliquam erat volutpat. Pellentesque tristique ante ut risus. Quisque dictum.</p>
