Añadiendo quienessomos.html

--- a/quienessomos.html
+++ b/quienessomos.html
@@ -1,14 +1,8 @@
 <!DOCTYPE HTML>
 
-<!--
-	Citrusy: A responsive HTML5 website template by HTML5Templates.com
-	Released for free under the Creative Commons Attribution 3.0 license (html5templates.com/license)
-	Visit http://html5templates.com for more great templates or follow us on Twitter @HTML5T
--->
-
 <html>
 <head>
-<title>Citrusy by HTML5Templates.com</title>
+<title>Quienes somos</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta name="description" content="" />
 <meta name="keywords" content="" />
@@ -45,7 +39,7 @@
 							<li><a href="twocolumn2.html">Two Column #2</a></li>
 							<li><a href="onecolumn.html">One Column</a></li>
 							<li><a href="servicios.html">Servicios</a></li>
-							<li><a href="quienessomos.html">Quienes Somos</a></li>
+							<li><a href="quienessomos.html">Quienes somos</a></li>
 						</ul>
 					</nav>
 				</div>
