--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
 	Visit http://html5templates.com for more great templates or follow us on Twitter @HTML5T
 -->
 
+<!--
+	LO TOCO
+-->
+
 <html>
 <head>
-<title>Citrusy by HTML5Templates.com</title>
+<title>Citrusy</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta name="description" content="" />
 <meta name="keywords" content="" />
@@ -44,6 +48,8 @@
 							<li><a href="twocolumn1.html">Two Column #1</a></li>
 							<li><a href="twocolumn2.html">Two Column #2</a></li>
 							<li><a href="onecolumn.html">One Column</a></li>
+							<li><a href="servicios.html">Servicios</a></li>
+							<li><a href="quienessomos.html">Quienes Somos</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -227,7 +233,7 @@
 			<div class="3u" id="box3">
 				<section>
 					<h2>Contact Information</h2>
-					<p><strong>Phone</strong>: +1 234 567 8900</p>
+					<p><strong>Phone</strong>: +1 234 567 8906</p>
 					<p><strong>Email</strong>: myemail@myemail.com</p>
 					<p>&nbsp;</p>
 					<p><strong>My CompanyName</strong></p>
