Nuevo commit para conflicto

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 					<p>&nbsp;</p>
 					<p><strong>My CompanyName</strong></p>
 					<p>1234 Pellentesque tristique ante risus </p>
-					<p>State, Plus Country 1234</p>
+					<p>State, España</p>
 				</section>
 			</div>
 		</div>
