--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 							<li><a href="onecolumn.html">F5 One Column</a></li>
 							<li><a href="servicios.html">F5 Servicios</a></li>
 							<li><a href="quienessomos.html">F5 Quienes Somos</a></li>
+							<li><a href="mipaginita.html">F5 Mi paginita</a></li>
 						</ul>
 					</nav>
 				</div>
