--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
 							<li><a href="luis.html">Mi primer pagina</a></li>
 							<li><a href="mipaginita.html">F5 Mi paginita</a></li>
 							<li><a href="estaesmipaginayvamosavercuantoscaracteressoportagitporquesimepasodetamañoometoeñesalomejornolocogebien.html">UNAPAGINA
-							<li><a href="fourthcolumn.html</a></li>
+							<li><a href="fourthcolumn.html"</a></li>
 						</ul>
+
 					</nav>
 				</div>
 			</div>
