--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
 							<li><a href="twocolumn2.html">F5 Two Column #2</a></li>
 							<li><a href="onecolumn.html">F5 One Column</a></li>
 							<li><a href="enrique.html">F5 Enrique</a></li>
-							<li><a href="enrique1.html">F5 Enrique</a></li>
+							<li><a href="enrique1.html">F5 Enrique 2</a></li>
+							<li><a href="enrique2.html">F5 Enrique 2</a></li>
 							<li><a href="servicios.html">F5 Servicios</a></li>
 							<li><a href="quienessomos.html">F5 Quienes Somos</a></li>
 							<li><a href="luis.html">Mi primer pagina</a></li>
 							<li><a href="mipaginita.html">F5 Mi paginita</a></li>
-							<li><a href="estaesmipaginayvamosavercuantoscaracteressoportagitporquesimepasodetamañoometoeñesalomejornolocogebien.html">UNAPAGINA
-							<li><a href="fourthcolumn.html"</a></li>
+							<li><a href="cambiandonombrelargodepablo.html">UNAPAGINA</a></li>
+							<li><a href="fourthcolumn.html">fourthcolumn</a></li>
 						</ul>
-
 					</nav>
 				</div>
 			</div>
