re segundo cambio con conflicto del Fork

--- a/luis.html
+++ b/luis.html
@@ -1,3 +1,6 @@
 <!-- Primer cambio en mi rama CAMBIO AÑADIDO 1 -->
 
 <!-- Comit para rebase -->
+
+<!-- Primer cambio en mi rama, primer cambio del fork -->
+<!-- Segundo commit del Fork -->
