--- a/mipaginita.html
+++ b/mipaginita.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-<title>Citrusy by HTML5Templates.com</title>
+<title>Citrusy CAMBIO JULIO 2</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta name="description" content="" />
 <meta name="keywords" content="" />
