cambiada linea 38...entre otras

--- a/index.html
+++ b/index.html
@@ -44,19 +44,69 @@
 					<nav class="mobileUI-site-nav">
 						<ul>
 							<li class="current_page_item"><a href="index.html">Homepage</a></li>
+
 							<li><a href="threecolumn.html">F5 Three Column</a></li>
+
+
+
 							<li><a href="twocolumn1.html">F5 Two Column #1</a></li>
+
+
+
 							<li><a href="twocolumn2.html">F5 Two Column #2</a></li>
-							<li><a href="onecolumn.html">F5 One Column</a></li>
-							<li><a href="enrique.html">F5 Enrique</a></li>
-							<li><a href="enrique1.html">F5 Enrique 2</a></li>
-							<li><a href="enrique2.html">F5 Enrique 2</a></li>
-							<li><a href="servicios.html">F5 Servicios</a></li>
-							<li><a href="quienessomos.html">F5 Quienes Somos</a></li>
-							<li><a href="luis.html">Mi primer pagina</a></li>
-							<li><a href="mipaginita.html">F5 Mi paginita</a></li>
-							<li><a href="cambiandonombrelargodepablo.html">UNAPAGINA</a></li>
-							<li><a href="fourthcolumn.html">fourthcolumn</a></li>
+
+
+
+
+							<li><a href="xonecolumn.html">F5 One Column</a></li>
+
+
+
+
+							<li><a href="xenrique.html">F5 Enrique</a></li>
+
+
+
+
+							<li><a href="xenrique1.html">F5 Enrique 2</a></li>
+
+
+
+
+							<li><a href="xenrique2.html">F5 Enrique 2</a></li>
+
+
+
+
+							<li><a href="xservicios.html">F5 Servicios</a></li>
+
+
+
+
+
+							<li><a href="xquienessomos.html">F5 Quienes Somos</a></li>
+
+
+
+
+							<li><a href="xluis.html">Mi primer pagina</a></li>
+
+
+
+
+							<li><a href="xmipaginita.html">F5 Mi paginita</a></li>
+
+
+
+
+
+							<li><a href="xcambiandonombrelargodepablo.html">UNAPAGINA</a></li>
+
+
+
+
+
+							<li><a href="xfourthcolumn.html">fourthcolumn</a></li>
 						</ul>
 					</nav>
 				</div>
