--- a/mipaginita.html
+++ b/mipaginita.html
@@ -8,7 +8,7 @@
 <meta name="keywords" content="" />
 <noscript>
 <link rel="stylesheet" href="css/5grid/core.css" />
-<link rel="stylesheet" href="css/5grid/core-desktop.css" />
+<ink rel="stylesheet" href="css/5grid/core-desktop.css" />
 <link rel="stylesheet" href="css/5grid/core-1200px.css" />
 <link rel="stylesheet" href="css/5grid/core-noscript.css" />
 <link rel="stylesheet" href="css/style.css" />
