--- a/quienessomos.html
+++ b/quienessomos.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-<title>Quienes somos</title>
+<itle>Quienes somos</title>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta name="description" content="" />
 <meta name="keywords" content="" />
