Cambiar todo el menu

--- a/index.html
+++ b/index.html
@@ -43,20 +43,20 @@
 				<div class="12u" id="menu">
 					<nav class="mobileUI-site-nav">
 						<ul>
-							<li class="current_page_item"><a href="index.html">Homepage</a></li>
-							<li><a href="threecolumn.html">F5 Three Column</a></li>
-							<li><a href="twocolumn1.html">F5 Two Column #1</a></li>
-							<li><a href="twocolumn2.html">F5 Two Column #2</a></li>
-							<li><a href="onecolumn.html">F5 One Column</a></li>
-							<li><a href="enrique.html">F5 Enrique</a></li>
-							<li><a href="enrique1.html">F5 Enrique 2</a></li>
-							<li><a href="enrique2.html">F5 Enrique 2</a></li>
-							<li><a href="servicios.html">F5 Servicios</a></li>
-							<li><a href="quienessomos.html">F5 Quienes Somos</a></li>
-							<li><a href="luis.html">Mi primer pagina</a></li>
-							<li><a href="mipaginita.html">F5 Mi paginita</a></li>
-							<li><a href="cambiandonombrelargodepablo.html">UNAPAGINA</a></li>
-							<li><a href="fourthcolumn.html">fourthcolumn</a></li>
+							<li class="current_page_item"><a href="index.html">Homepage1</a></li>
+							<li><a href="threecolumn.html">F5 Three Column1</a></li>
+							<li><a href="twocolumn1.html">F5 Two Column #11</a></li>
+							<li><a href="twocolumn2.html">F5 Two Column #21</a></li>
+							<li><a href="onecolumn.html">F5 One Column1</a></li>
+							<li><a href="enrique.html">F5 Enrique1</a></li>
+							<li><a href="enrique1.html">F5 Enrique 21</a></li>
+							<li><a href="enrique2.html">F5 Enrique 21</a></li>
+							<li><a href="servicios.html">F5 Servicios1</a></li>
+							<li><a href="quienessomos.html">F5 Quienes Somos1</a></li>
+							<li><a href="luis2.html">Mi primer pagina2</a></li>
+							<li><a href="mipaginita.html">F5 Mi paginita1</a></li>
+							<li><a href="cambiandonombrelargodepablo.html">UNAPAGINA1</a></li>
+							<li><a href="fourthcolumn.html">fourthcolumn1</a></li>
 						</ul>
 					</nav>
 				</div>
